Implement full Hormone functionality
