# src/main/java/com/york/doghealthtracker/controller/HormonesController.java
@@ -1,23 +1,27 @@
 package com.york.doghealthtracker.controller;
 
 import com.york.doghealthtracker.api.HormonesApi;
-import com.york.doghealthtracker.config.HormoneQuizConfig;
+import com.york.doghealthtracker.entity.DogEntity;
+import com.york.doghealthtracker.entity.UserEntity;
 import com.york.doghealthtracker.model.HormoneQuestion;
 import com.york.doghealthtracker.model.HormoneStatusResponse;
+import com.york.doghealthtracker.model.QuizAnswer;
 import com.york.doghealthtracker.service.HormonesService;
+import com.york.doghealthtracker.service.utils.UserContextService;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @RestController
 public class HormonesController implements HormonesApi {
 
+    private final UserContextService userContextService;
     private final HormonesService hormonesService;
 
-    public HormonesController(HormonesService hormonesService) {
+    public HormonesController(UserContextService userContextService, HormonesService hormonesService) {
+        this.userContextService = userContextService;
         this.hormonesService = hormonesService;
     }
 
@@ -28,14 +32,20 @@ public class HormonesController implements HormonesApi {
     }
 
     @Override
-    public ResponseEntity<Void> submitHormoneQuiz(Map<String, String> requestBody) {
-        hormonesService.calculateQuizStatus(requestBody);
+    public ResponseEntity<Void> submitHormoneQuiz(Map<String, QuizAnswer> requestBody) {
+
+        DogEntity dog = userContextService.getDogInContext();
+
+        hormonesService.calculateQuizStatus(requestBody, dog);
         return ResponseEntity.status(201).build();
     }
 
     @Override
     public ResponseEntity<HormoneStatusResponse> getHormoneStatus() {
-        HormoneStatusResponse status = hormonesService.getHormoneStatusResponse();
+
+        DogEntity dog = userContextService.getDogInContext();
+
+        HormoneStatusResponse status = hormonesService.getHormoneStatusResponse(dog);
         return ResponseEntity.ok(status);
     }
 }
